Fixed background color on mobile devices

--- a/home-app/src/styles/header.sass
+++ b/home-app/src/styles/header.sass
@@ -2,8 +2,7 @@
 	height: 100%
 	background-color: #092d6c
     background-repeat: no-repeat
-	height: 100vh
-	min-height: 100%
+	min-height: 100vh
 	
 	.main 
 		margin: 0 auto
